[gd_scene load_steps=4 format=3 uid="uid://jnvk7b56yxlr"]

[ext_resource type="Script" path="res://Scripts/settings_window.gd" id="1_hpwg1"]
[ext_resource type="Texture2D" uid="uid://oneycjpo3fcb" path="res://Assets/button_smile.png" id="2_c14l0"]
[ext_resource type="Texture2D" uid="uid://dcntaqfygcyls" path="res://Assets/button_dead.png" id="3_glcqd"]

[node name="SettingsWindow" type="Window"]
title = "Settings"
position = Vector2i(0, 36)
size = Vector2i(200, 200)
unresizable = true
always_on_top = true
script = ExtResource("1_hpwg1")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="RowSetterContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RowSetterLabel" type="Label" parent="PanelContainer/VBoxContainer/RowSetterContainer"]
layout_mode = 2
text = "rows"

[node name="RowSetterEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/RowSetterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ColSetterContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ColSetterLabel" type="Label" parent="PanelContainer/VBoxContainer/ColSetterContainer"]
layout_mode = 2
text = "cols"

[node name="ColSetterEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/ColSetterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MineSetterContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MineSetterLabel" type="Label" parent="PanelContainer/VBoxContainer/MineSetterContainer"]
layout_mode = 2
text = "mines"

[node name="MineSetterEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/MineSetterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ValidateButtonsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="OkButton" type="Button" parent="PanelContainer/VBoxContainer/ValidateButtonsContainer"]
layout_mode = 2
text = "OK"
icon = ExtResource("2_c14l0")

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/ValidateButtonsContainer"]
layout_mode = 2
text = "Cancel"
icon = ExtResource("3_glcqd")

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ValidateButtonsContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ValidateButtonsContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
